Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/crpe.h


#define PE_UNCHANGED       -1
short CRPE_API PEGetNSections (short printJob); 
short CRPE_API PEGetNSectionsInArea(short printJob, short areaCode); 
short CRPE_API PEGetSectionCode (short printJob,  
                                 short sectionN); 
BOOL CRPE_API PEGetSectionHeight(short printJob,
                                 short sectionCode,
                                 short FAR * height); 
BOOL CRPE_API PESetSectionHeight (short printJob,
                                  short sectionCode,
                                  short height); 
typedef struct PESectionOptions 
{
    WORD StructSize;            
    short visible,              
          newPageBefore,        
          newPageAfter,
          keepTogether,
          suppressBlankSection,
          resetPageNAfter,
          printAtBottomOfPage;
    COLORREF backgroundColor;   
    short underlaySection;      
    short showArea;             
    short freeFormPlacement;
    short reserveMinimumPageFooter; 
}PESectionOptions;
#define PE_SIZEOF_SECTION_OPTIONS (sizeof (PESectionOptions))
#define PE_WORD_LEN           2
#define PE_WORD_LEN          2
#define PE_DLL_NAME_LEN      64
BOOL CRPE_API PEHasSavedData (short printJob,
                              BOOL FAR *hasSavedData);
BOOL CRPE_API PEDiscardSavedData (short printJob);
BOOL CRPE_API PEGetReportTitle (short printJob,
                                HANDLE FAR *titleHandle,
                                short  FAR *titleLength);
BOOL CRPE_API PESetReportTitle (short printJob,
                                const char FAR *title);
BOOL CRPE_API PEOutputToWindow (short printJob,
                                const char FAR *title,
                                int left,
                                int top,
                                int width,
                                int height,
                                DWORD style,
                                HWND parentWindow);
typedef struct PEWindowOptions
{
    WORD StructSize;                
    short hasGroupTree;             
    short canDrillDown;             
    short hasNavigationControls;    
    short hasCancelButton;          
    short hasPrintButton;           
    short hasExportButton;          
    short hasZoomControl;           
    short hasCloseButton;           
    short hasProgressControls;      
    short hasSearchButton;          
    short hasPrintSetupButton;      
    short hasRefreshButton;         
    short showToolbarTips;          
    short showDocumentTips;         
    short hasLaunchButton;          
}
    PEWindowOptions;
#define PE_SIZEOF_WINDOW_OPTIONS (sizeof (PEWindowOptions))
BOOL CRPE_API PESetWindowOptions (short printJob,
                                  PEWindowOptions FAR *options);
BOOL CRPE_API PEGetWindowOptions (short printJob,
                                  PEWindowOptions FAR *options);
HWND CRPE_API PEGetWindowHandle (short printJob);
void CRPE_API PECloseWindow (short printJob);
BOOL CRPE_API PEShowNextPage (short printJob);
BOOL CRPE_API PEShowFirstPage (short printJob);
BOOL CRPE_API PEShowPreviousPage (short printJob);
BOOL CRPE_API PEShowLastPage (short printJob);
short CRPE_API PEGetNPages (short printJob);
BOOL CRPE_API PEShowNthPage (short printJob,
                             short pageN); 
#define PE_ZOOM_FULL_SIZE           0
#define PE_ZOOM_SIZE_FIT_ONE_SIDE   1
#define PE_ZOOM_SIZE_FIT_BOTH_SIDES 2
BOOL CRPE_API PEZoomPreviewWindow (short printJob,
                                   short level); 
BOOL CRPE_API PEShowPrintControls (short printJob,
                                   BOOL showPrintControls);
BOOL CRPE_API PEPrintControlsShowing (short printJob,
                                      BOOL FAR *controlsShowing);
BOOL CRPE_API PEPrintWindow (short printJob,
                             BOOL waitUntilDone);
BOOL CRPE_API PEExportPrintWindow (short printJob,
                                   BOOL toMail,
                                   BOOL waitUntilDone);
BOOL CRPE_API PENextPrintWindowMagnification (short printJob);
BOOL CRPE_API PESelectPrinter (short printJob,
                               const char FAR *driverName,
                               const char FAR *printerName,
                               const char FAR *portName,
#if defined (WIN32)
BOOL CRPE_API PEGetSelectedPrinter (short printJob,
                                    HANDLE  FAR *driverHandle,
                                    short   FAR *driverLength,
                                    HANDLE  FAR *printerHandle,
                                    short   FAR *printerLength,
                                    HANDLE  FAR *portHandle,
                                    short   FAR *portLength,
#if defined (WIN32)
BOOL CRPE_API PEFreeDevMode (short printJob, DEVMODEA FAR * mode);
BOOL CRPE_API PEOutputToPrinter (short printJob,
                                 short nCopies);
BOOL CRPE_API PESetNDetailCopies (short printJob,
                                  short nDetailCopies);
BOOL CRPE_API PEGetNDetailCopies (short printJob,
                                  short FAR *nDetailCopies);
#define PE_MAXPAGEN  65535
#define PE_FILE_PATH_LEN     512
#define PE_UNCOLLATED       0
#define PE_COLLATED         1
#define PE_DEFAULTCOLLATION 2
typedef struct PEPrintOptions
{
    WORD StructSize;            
    unsigned short startPageN,
                   stopPageN;
    unsigned short nReportCopies;
    unsigned short collation;
    char outputFileName[PE_FILE_PATH_LEN];
}
    PEPrintOptions;
#define PE_SIZEOF_PRINT_OPTIONS (sizeof (PEPrintOptions))
BOOL CRPE_API PESetPrintOptions (short printJob,
                                 PEPrintOptions FAR *options);
BOOL CRPE_API PEGetPrintOptions (short printJob,
                                 PEPrintOptions FAR *options);
typedef struct PEExportOptions
{
    WORD StructSize;               
    char formatDLLName [PE_DLL_NAME_LEN];
    DWORD formatType;
    void FAR *formatOptions;
    char destinationDLLName [PE_DLL_NAME_LEN];
    DWORD destinationType;
    void FAR *destinationOptions;
    WORD nFormatOptionsBytes;      
    WORD nDestinationOptionsBytes; 
}
    PEExportOptions;
#define PE_SIZEOF_EXPORT_OPTIONS (sizeof (PEExportOptions))
BOOL CRPE_API PEGetExportOptions (short printJob,
                                  PEExportOptions FAR *options);
BOOL CRPE_API PEExportTo (short printJob,
                          PEExportOptions FAR *options);
#define PE_SM_DEFAULT  (short)0x8000
BOOL CRPE_API PESetMargins (short printJob,
                            short left,
                            short right,
                            short top,
                            short bottom);
BOOL CRPE_API PEGetMargins (short printJob,
                            short FAR *left,
                            short FAR *right,
                            short FAR *top,
                            short FAR *bottom);
#define PE_SI_APPLICATION_NAME_LEN  128
#define PE_SI_TITLE_LEN 128
#define PE_SI_SUBJECT_LEN 128
#define PE_SI_AUTHOR_LEN 128
#define PE_SI_KEYWORDS_LEN 128
#define PE_SI_COMMENTS_LEN 512
#define PE_SI_REPORT_TEMPLATE_LEN 128
typedef struct PEReportSummaryInfo
{
    WORD StructSize;
    char applicationName[PE_SI_APPLICATION_NAME_LEN]; 
    char title[PE_SI_TITLE_LEN];
    char subject[PE_SI_SUBJECT_LEN];
    char author[PE_SI_AUTHOR_LEN];
    char keywords[PE_SI_KEYWORDS_LEN];
    char comments[PE_SI_COMMENTS_LEN];
    char reportTemplate[PE_SI_REPORT_TEMPLATE_LEN];
    short savePreviewPicture; 
} PEReportSummaryInfo;
#define PE_SIZEOF_REPORT_SUMMARY_INFO (sizeof(PEReportSummaryInfo))
BOOL CRPE_API PEGetReportSummaryInfo(short printJob, PEReportSummaryInfo FAR * summaryInfo);
BOOL CRPE_API PESetReportSummaryInfo(short printJob, PEReportSummaryInfo FAR * summaryInfo);
                                 BOOL ( CALLBACK * callbackProc )(short eventID, void *param, void *userData),
#else
                                 BOOL ( CALLBACK __export * callbackProc )(short eventID, void *param, void *userData),
#endif