Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/global32.bas


' Saved data
' ----------
'
' Use PEHasSavedData to find out if a report currently has saved data
' associated with it.  This may or may not be TRUE when a print job is
' first opened from a report file.  Since data is saved during a print,
' this will always be TRUE immediately after a report is printed.
'
' Use PEDiscardSavedData to release the saved data associated with a
' report.  The next time the report is printed, it will get current data
' from the database.
'
' The default behavior is for a report to use its saved data, rather than
' refresh its data from the database when printing a report.

Declare Function PEHasSavedData Lib "crpe32.dll" (ByVal printJob%, HasSavedData As Long) As Integer

Declare Function PEDiscardSavedData Lib "crpe32.dll" (ByVal printJob%) As Integer


' Report title
' ------------

Declare Function PEGetReportTitle Lib "crpe32.dll" (ByVal printJob%, TitleHandle As Long, titleLength%) As Integer
Declare Function PESetReportTitle Lib "crpe32.dll" (ByVal printJob%, ByVal Title$) As Integer


' Controlling print to window
' ---------------------------

Declare Function PEOutputToWindow Lib "crpe32.dll" (ByVal printJob%, ByVal Title$, ByVal Left As Long, ByVal Top As Long, ByVal Width As Long, ByVal height As Long, ByVal style As Long, ByVal PWindow As Long) As Integer

Type PEWindowOptions
    StructSize As Integer            'initialize to PE_SIZEOF_WINDOW_OPTIONS

    hasGroupTree As Integer          '0 or 1, except use PE_UNCHANGED for no change
    canDrillDown As Integer          '0 or 1, except use PE_UNCHANGED for no change
    hasNavigationControls As Integer '0 or 1, except use PE_UNCHANGED for no change
    hasCancelButton As Integer       '0 or 1, except use PE_UNCHANGED for no change
    hasPrintButton As Integer        '0 or 1, except use PE_UNCHANGED for no change
    hasExportButton As Integer       '0 or 1, except use PE_UNCHANGED for no change
    hasZoomControl As Integer        '0 or 1, except use PE_UNCHANGED for no change
    hasCloseButton As Integer        '0 or 1, except use PE_UNCHANGED for no change
    hasProgressControls As Integer   '0 or 1, except use PE_UNCHANGED for no change
    hasSearchButton As Integer       '0 or 1, except use PE_UNCHANGED for no change
    hasPrintSetupButton As Integer   '0 or 1, except use PE_UNCHANGED for no change
    hasRefreshButton As Integer      '0 or 1, except use PE_UNCHANGED for no change
    showToolbarTips As Integer       ' BOOL value, except use PE_UNCHANGED for no change
                                     ' default is TRUE (*Show* tooltips on toolbar)
    showDocumentTips As Integer      ' BOOL value, except use PE_UNCHANGED for no change
                                     ' default is FALSE (*Hide* tooltips on document)
    hasLaunchButton As Integer       ' Launch Seagate Analysis button on toolbar.
                                     ' BOOL value, except use PE_UNCHANGED for no change
                                     ' default is FALSE
End Type

Global Const PE_SIZEOF_WINDOW_OPTIONS = (16 * PE_WORD_LEN)

Declare Function PEGetWindowOptions Lib "crpe32.dll" (ByVal printJob%, Options As PEWindowOptions) As Integer

Declare Function PESetWindowOptions Lib "crpe32.dll" (ByVal printJob%, Options As PEWindowOptions) As Integer

Declare Function PEGetWindowHandle Lib "crpe32.dll" (ByVal printJob%) As Long

Declare Sub PECloseWindow Lib "crpe32.dll" (ByVal printJob%)


' Controlling printed pages
' -------------------------

Declare Function PEShowNextPage Lib "crpe32.dll" (ByVal printJob%) As Integer
Declare Function PEShowFirstPage Lib "crpe32.dll" (ByVal printJob%) As Integer
Declare Function PEShowPreviousPage Lib "crpe32.dll" (ByVal printJob%) As Integer
Declare Function PEShowLastPage Lib "crpe32.dll" (ByVal printJob%) As Integer
Declare Function PEGetNPages Lib "crpe32.dll" (ByVal printJob%) As Integer
Declare Function PEShowNthPage Lib "crpe32.dll" (ByVal printJob%, ByVal pageN%) As Integer

Global Const PE_ZOOM_FULL_SIZE = 0
Global Const PE_ZOOM_SIZE_FIT_ONE_SIDE = 1
Global Const PE_ZOOM_SIZE_FIT_BOTH_SIDES = 2

Declare Function PEZoomPreviewWindow Lib "crpe32.dll" (ByVal printJob%, ByVal ZoomLevel%) As Integer
' ZoomLevel is a percent from 25 to 400 or a PE_ZOOM_ constant

' Controlling print window when print control buttons hidden
' ----------------------------------------------------------

Declare Function PEShowPrintControls Lib "crpe32.dll" (ByVal printJob%, ByVal ShowPrintControls%) As Integer

Declare Function PEPrintControlsShowing Lib "crpe32.dll" (ByVal printJob%, ControlsShowing As Long) As Integer

Declare Function PEPrintWindow Lib "crpe32.dll" (ByVal printJob%, ByVal WaitNoWait%) As Integer

Declare Function PEExportPrintWindow Lib "crpe32.dll" (ByVal printJob%, ByVal ToMail%, ByVal WaitUntilDone%) As Integer

Declare Function PENextPrintWindowMagnification Lib "crpe32.dll" (ByVal printJob%) As Integer


' Changing printer selection
' --------------------------

Declare Function PESelectPrinter Lib "crpe32.dll" (ByVal printJob%, ByVal PrinterDriver$, ByVal PrinterName$, ByVal PortName$, DevMode As Any) As Integer

Declare Function PEGetSelectedPrinter Lib "crpe32.dll" (ByVal printJob%, DriverHandle As Long, DriverLength%, PrinterHandle As Long, PrinterLength%, PortHandle As Long, PortLength%, DevMode As Any) As Integer

Declare Function PEFreeDevMode Lib "crpe32.dll" (ByVal printJob As Integer, mode As Any) As Integer



' Controlling print to printer
' ----------------------------

Declare Function PEOutputToPrinter Lib "crpe32.dll" (ByVal printJob%, ByVal nCopies%) As Integer

Declare Function PESetNDetailCopies Lib "crpe32.dll" (ByVal printJob%, ByVal NDetailCopies%) As Integer

Declare Function PEGetNDetailCopies Lib "crpe32.dll" (ByVal printJob%, NDetailCopies%) As Integer

' Extension to PESetPrintOptions function: If the 2nd parameter
' (pointer to PEPrintOptions) is set to 0 (null) the function prompts
' the user for these options.
'
' With this change, you can get the behaviour of the print-to-printer
' button in the print window by calling PESetPrintOptions with a
' null pointer and then calling PEPrintWindow.

Global Const PE_MAXPAGEN = 65535
Global Const PE_FILE_PATH_LEN = 512

Global Const PE_UNCOLLATED = 0
Global Const PE_COLLATED = 1
Global Const PE_DEFAULTCOLLATION = 2

Type PEPrintOptions
    StructSize As Integer   ' initialize to # bytes in PEPrintOptions

    ' page and copy numbers are 1-origin
    ' use 0 to preserve the existing settings
    StartPageN As Integer
    stopPageN As Integer

    nReportCopies As Integer
    collation As Integer
    outputFileName As String * PE_FILE_PATH_LEN
End Type

Global Const PE_SIZEOF_PRINT_OPTIONS = 5 * PE_WORD_LEN + PE_FILE_PATH_LEN

Declare Function PESetPrintOptions Lib "crpe32.dll" (ByVal printJob%, Options As PEPrintOptions) As Integer

Declare Function PEGetPrintOptions Lib "crpe32.dll" (ByVal printJob%, Options As PEPrintOptions) As Integer


' Controlling print to file and export
' ------------------------------------

Global Const PE_FT_RECORD = 0
Global Const PE_FT_TABSEPARATED = 1
Global Const PE_FT_TEXT = 2
Global Const PE_FT_DIF = 3
Global Const PE_FT_CSV = 4
Global Const PE_FT_CHARSEPARATED = 5
Global Const PE_FT_TABFORMATTED = 6

Global Const PE_FIELDDELIMLEN = 17

Declare Function PEOutputToFile Lib "crpe32.dll" (ByVal printJob%, ByVal OutputFilePath$, ByVal FileType%, Options As Any) As Integer

Type PEExportOptions
    StructSize As Integer   'initialize to # bytes in PEExportOptions

    FormatDLLName As String * PE_DLL_NAME_LEN
    FormatType1 As Integer
    FormatType2 As Integer
    FormatOptions1 As Integer
    FormatOptions2 As Integer

    DestinationDLLName As String * PE_DLL_NAME_LEN
    DestinationType1 As Integer
    DestinationType2 As Integer
    DestinationOptions1 As Integer
    DestinationOptions2 As Integer

    ' following are set by PEGetExportOptions,
    ' and ignored by PEExportTo.
    NFormatOptionsBytes As Integer
    NDestinationOptionsBytes As Integer
End Type

Global Const PE_SIZEOF_EXPORT_OPTIONS = 11 * PE_WORD_LEN + 2 * PE_DLL_NAME_LEN

Declare Function PEGetExportOptions Lib "crpe32.dll" (ByVal printJob%, ExportOptions As PEExportOptions) As Integer

Declare Function PEExportTo Lib "crpe32.dll" (ByVal printJob%, ExportOptions As PEExportOptions) As Integer


' Setting page margins
' --------------------

Global Const PE_SM_DEFAULT = &H8000

Declare Function PESetMargins Lib "crpe32.dll" (ByVal printJob%, ByVal LeftMargin%, ByVal RightMargin%, ByVal TopMargin%, ByVal BottomMargin%) As Integer

Declare Function PEGetMargins Lib "crpe32.dll" (ByVal printJob%, LeftMargin%, RightMargin%, TopMargin%, BottomMargin%) As Integer


'Report Summary Info
'-------------------

Global Const PE_SI_APPLICATION_NAME_LEN = 128
Global Const PE_SI_TITLE_LEN = 128
Global Const PE_SI_SUBJECT_LEN = 128
Global Const PE_SI_AUTHOR_LEN = 128
Global Const PE_SI_KEYWORDS_LEN = 128
Global Const PE_SI_COMMENTS_LEN = 512
Global Const PE_SI_REPORT_TEMPLATE_LEN = 128

Type PEReportSummaryInfo
    StructSize As Integer
    applicationName As String * PE_SI_APPLICATION_NAME_LEN ' read only.
    Title As String * PE_SI_TITLE_LEN
    subject As String * PE_SI_SUBJECT_LEN
    author As String * PE_SI_AUTHOR_LEN
    keywords As String * PE_SI_KEYWORDS_LEN
    comments As String * PE_SI_COMMENTS_LEN
    reportTemplate As String * PE_SI_REPORT_TEMPLATE_LEN
    savePreviewPicture As Integer   ' BOOL PE_UNCHANGED for no change
End Type

Global Const PE_SIZEOF_REPORT_SUMMARY_INFO = 1 * PE_WORD_LEN + _
                                      PE_SI_APPLICATION_NAME_LEN + _
                                      PE_SI_TITLE_LEN + _
                                      PE_SI_SUBJECT_LEN + _
                                      PE_SI_AUTHOR_LEN + _
                                      PE_SI_KEYWORDS_LEN + _
                                      PE_SI_COMMENTS_LEN + _
                                      PE_SI_REPORT_TEMPLATE_LEN + _
                                      1 * PE_WORD_LEN
                                
Declare Function PEGetReportSummaryInfo Lib "crpe32.dll" (ByVal printJob%, summaryInfo As PEReportSummaryInfo) As Integer
Declare Function PESetReportSummaryInfo Lib "crpe32.dll" (ByVal printJob%, summaryInfo As PEReportSummaryInfo) As Integer

' Setting section height and format
' ---------------------------------

Declare Function PEGetNSections Lib "crpe32.dll" (ByVal printJob%) As Integer
Declare Function PEGetNSectionsInArea Lib "crpe32.dll" (ByVal printJob As Integer, ByVal areaCode As Integer) As Integer ' return -1 if failed

Declare Function PEGetSectionCode Lib "crpe32.dll" (ByVal printJob%, ByVal sectionN%) As Integer

' MinimumHeight is in twips - 1440 twips to the inch
'This is the replacement API Call for PEGetMinimumSectionHeight which is obsolete.
'The obsolete API will still work for older applications, but use this for all new development
Declare Function PEGetSectionHeight Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%, height%) As Integer

'This is the replacement API Call for PESetMinimumSectionHeight which is obsolete.
'The obsolete API will still work for older applications, but use this for all new development
Declare Function PESetSectionHeight Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%, ByVal height%) As Integer

Type PESectionOptions
    StructSize As Integer   ' initialize to PE_SIZEOF_SECTION_OPTIONS
